--- a/admin/css/master.css
+++ b/admin/css/master.css
@@ -1,12 +1,8 @@
-/*
-    DEMO STYLE
-*/
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    background: #eee;
 }
 
 p {
@@ -47,6 +43,30 @@ a, a:hover, a:focus {
 
 .navbar-header h2{
   margin: 10px 0;
+}
+
+#login {
+  width: 100%;
+}
+
+.loginHeader h2 {
+  margin: 0;
+}
+
+.loginHeader {
+  margin-bottom: 15px;
+}
+
+#login-content {
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  width:30em;
+  height:26em;
+  margin-top: -13em;
+  margin-left: -15em;
+  background-color: white;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 /* ---------------------------------------------------
